# GAP

./: CMakeLists.txt  align.sh  align_random.sh  index.py  index.sh  main.cpp
headers/: Align.h  BroWheel.h  Graph.h  Help.h  Memory.h  RandomReads.h  Tests.h  Threadpool.h  Track.h  test.h
tools/: align.sh  best_splice.sh  filter_sam.sh  get_indel.sh  percent.sh  to_sam.sh  tools.py
